force-app/main/default/objects/SVMXC__Stock_Adjustment__c/fields/SVMXC__Change_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Change_Quantity2__c</fullName>
    <description>Positive number indicating the change in quantity (Higher quantity – lower quantity)</description>
    <formula>IF( SVMXC__New_Quantity2__c  &gt;  SVMXC__Old_Quantity2__c , SVMXC__New_Quantity2__c   -   SVMXC__Old_Quantity2__c ,  SVMXC__Old_Quantity2__c  -  SVMXC__New_Quantity2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Positive number indicating the change in quantity (Higher quantity – lower quantity)</inlineHelpText>
    <label>Change Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>