force-app/main/default/objects/SVMXC__Stock_Adjustment__c/fields/SVMXC__Change_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Change_Type__c</fullName>
    <description>Indicates if the change was an increase or decrease</description>
    <formula>IF( SVMXC__New_Quantity2__c  &gt;  SVMXC__Old_Quantity2__c  , &quot;Increase&quot;,  IF( SVMXC__Old_Quantity2__c &gt;  SVMXC__New_Quantity2__c  , &quot;Decrease&quot;, &quot;&quot;) )</formula>
    <inlineHelpText>Indicates if the change was an increase or decrease</inlineHelpText>
    <label>Change Type</label>
    <type>Text</type>
</CustomField>