force-app/main/default/objects/SVMXC__Stock_Adjustment__c/validationRules/SVMXC__SVMXC_ValidateAdjustmentQuantityChange.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateAdjustmentQuantityChange</fullName>
    <active>false</active>
    <description>Adjustment quantity cannot be changed.</description>
    <errorConditionFormula>AND(!ISNEW(),  ISCHANGED(SVMXC__New_Quantity2__c))</errorConditionFormula>
    <errorDisplayField>SVMXC__New_Quantity2__c</errorDisplayField>
    <errorMessage>Once saved, adjustment quantity cannot be modified.</errorMessage>
</ValidationRule>