force-app/main/default/objects/SVMXC__Stock_Adjustment__c/validationRules/SVMXC__SVMXC_ValidateStockableLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC__SVMXC_ValidateStockableLocation</fullName>
    <active>false</active>
    <description>The adjustment location should be a stocking location.</description>
    <errorConditionFormula>(SVMXC__Location__r.SVMXC__Stocking_Location__c = false)</errorConditionFormula>
    <errorDisplayField>SVMXC__Location__c</errorDisplayField>
    <errorMessage>This is not a stocking location. Please select stocking locations only.</errorMessage>
</ValidationRule>