force-app/main/default/objects/SVMXC__Stock_Adjustment__c/listViews/SVMXC__All_Stock_Adjustments.listView-meta.xml
<ListView>
    <fullName>SVMXC__All_Stock_Adjustments</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Adjustment_Type__c</columns>
    <columns>SVMXC__Product__c</columns>
    <columns>SVMXC__Change_Quantity2__c</columns>
    <columns>SVMXC__Posted_To_Inventory__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Stock Adjustments</label>
    <language>en_US</language>
</ListView>